[tool.poetry]
name = "hooligapps-test-backend"
version = "0.1.0"
description = "Backend for hooligapps-test"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["dotenv"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"
alembic = "^1.13.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
greenlet = "^3.2.4"
sqlalchemy-utils = "^0.42.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.0"
mypy = "^1.8.0"
ruff = "^0.1.13"
pre-commit = "^3.6.0"
pytest-cov = "^3.0.0"

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "Makefile",
    "migrations/versions"
]

[tool.ruff.lint]
# list of rules - https://docs.astral.sh/ruff/rules/
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "strict" 

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
